2009-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

    * generic/tclZlib.c      hack needed for official zlib1.dll build. 
	* win/configure.in       fix [Feature Request 2605263] use official
	* win/Makefile.in        zlib build.
	* win/configure          (regenerated)

2009-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in  fix [Bug 2605232] tdbc doesn't build when
	Tcl is compiled with --disable-shared.

2009-02-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Added protections from invalid memory
	* generic/tclTestObj.c:		accesses when we append (some part of)
	* tests/stringObj.test:		a Tcl_Obj to itself.  Added the
	appendself and appendself2 subcommands to the [teststringobj] testing
	command and added tests to the test suite.  [Bug 2603158]

	* generic/tclStringObj.c:	Factor out duplicate code from
	Tcl_AppendObjToObj.

	* generic/tclStringObj.c:	Replace the 'size_t uallocated' field
	of the String struct, storing the number of bytes allocated to store
	the Tcl_UniChar array, with an 'int maxChars' field, storing the
	number of Tcl_UniChars that may be stored in the allocated space.
	This reduces memory requirement a small bit, and makes some range
	checks simpler to code.
	* generic/tclTestObj.c:	Replace the [teststringobj ualloc] testing
	* tests/stringObj.test:	command with [teststringobj maxchars] and
	update the tests.

	* generic/tclStringObj.c:	Removed limitation in
	Tcl_AppendObjToObj where the char length of the result was only
	computed if the appended string was all single byte characters.
	This limitation was in place to dodge a bug in Tcl_GetUniChar.
	With that bug gone, we can take advantage of always recording the
	length of append results when we know it.

2009-02-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Revisions so that we avoid creating
	the strange representation of an empty string with
	objPtr->bytes == NULL and stringPtr->hasUnicode == 0.  Instead in